--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
     "scripts": {
         "dev": "tsx watch src/index.ts",
         "build": "tsc",
+        "postbuild": "node -e \"require('fs').copyFileSync('src/schema.sql', 'dist/schema.sql')\"",
         "start": "node dist/index.js",
-        "test": "vitest"
+        "test": "vitest run"
     },
     "dependencies": {
         "fastify": "^4.26.0",
