--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mauron85/react-native-background-geolocation": "^0.6.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-permissions": "^5.4.4",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-uuid": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
