--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rnmapbox/maps": "^11.6.0",
     "@mauron85/react-native-background-geolocation": "^0.6.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "react": "18.2.0",
