--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@rnmapbox/maps": "^10.2.7",
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-permissions": "^5.4.4",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-uuid": "^2.0.3"
@@ -27,6 +28,8 @@
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
