--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "fastify": "^4.26.0",
         "better-sqlite3": "^9.4.0",
-        "zod": "^3.22.0"
+        "zod": "^3.22.0",
+        "@fastify/static": "^6.12.0"
     },
     "devDependencies": {
         "typescript": "^5.3.0",
